chore: ignore backups and .next caches

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,8 @@ out/
 _backup/
 flight-lookup-redesign*/
 **/.next/
+
+# local junk / build / backups
+_backup/
+flight-lookup-redesign*/
+**/.next/
