--- a/web/package.json
+++ b/web/package.json
@@ -4,17 +4,20 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "next dev",
+    "build": "next build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "tw": "tailwindcss -i ./src/index.css -o ./src/tw.css --watch"
+    "tw": "tailwindcss -i ./src/index.css -o ./src/tw.css --watch",
+    "start": "next start"
   },
   "dependencies": {
+    "\"react-dom\"": "18.2.0",
     "axios": "^1.11.0",
     "clsx": "^2.1.1",
     "luxon": "^3.7.1",
-    "react": "^19.1.1",
+    "next": "14.2.5",
+    "react": "18.2.0",
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
