--- a/web/package.json
+++ b/web/package.json
@@ -12,16 +12,16 @@
     "start": "next start"
   },
   "dependencies": {
-    "\"react-dom\"": "18.2.0",
     "axios": "^1.11.0",
     "clsx": "^2.1.1",
     "luxon": "^3.7.1",
     "next": "14.2.5",
     "react": "18.2.0",
-    "react-dom": "^19.1.1"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@types/node": "24.3.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
@@ -30,6 +30,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "tailwindcss": "^3.4.17",
+    "typescript": "5.9.2",
     "vite": "^7.1.2"
   }
 }
