--- a/web/package.json
+++ b/web/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "axios": "^1.11.0",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.539.0",
     "luxon": "^3.7.1",
     "next": "14.2.5",
+    "next-themes": "^0.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
