--- a/web/package.json
+++ b/web/package.json
@@ -34,6 +34,7 @@
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "geist": "^1.4.2",
     "lucide-react": "^0.539.0",
     "luxon": "^3.7.1",
     "next": "14.2.5",
