--- a/package.json
+++ b/package.json
@@ -5,15 +5,41 @@
   "scripts": {
     "dev:backend": "cd server && npm run dev",
     "dev:frontend": "cd web && npm run dev",
-    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
+    "dev": "next dev",
     "install:all": "npm install && cd server && npm install && cd ../web && npm install",
-    "build": "cd web && npm run build",
-    "preview": "cd web && npm run preview"
+    "build": "next build",
+    "preview": "cd web && npm run preview",
+    "start": "next start -p 3000"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
   },
-  "keywords": ["flight", "lookup", "fr24", "api"],
+  "keywords": [
+    "flight",
+    "lookup",
+    "fr24",
+    "api"
+  ],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@radix-ui/react-dialog": "1.1.15",
+    "@radix-ui/react-slot": "1.2.3",
+    "@tailwindcss/postcss": "4.1.12",
+    "autoprefixer": "10.4.21",
+    "axios": "1.11.0",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "lucide-react": "0.539.0",
+    "luxon": "3.7.1",
+    "next": "14.2.5",
+    "next-themes": "0.4.6",
+    "postcss": "8.5.6",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "4.1.12"
+  },
+  "engines": {
+    "node": ">=20"
+  }
 }
