--- a/web/package.json
+++ b/web/package.json
@@ -6,58 +6,61 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p 3000"
+    "start": "next start -p 3000",
+    "pages:build": "npx @cloudflare/next-on-pages"
   },
   "dependencies": {
-    "next": "14.2.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-aspect-ratio": "^1.0.3",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-collapsible": "^1.0.3",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-hover-card": "^1.0.7",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-menubar": "^1.0.4",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@tailwindcss/postcss": "^4.0.0",
+    "autoprefixer": "^10.4.19",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "luxon": "^3.5.0",
-    "lucide-react": "^0.441.0",
-    "next-themes": "^0.3.0",
-    "tailwind-merge": "^2.4.0",
-
-    "tailwindcss": "^4.0.0",
-    "@tailwindcss/postcss": "^4.0.0",
-    "postcss": "^8.4.41",
-    "autoprefixer": "^10.4.19",
-
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-progress": "^1.0.3",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-tooltip": "^1.0.7",
-    "@radix-ui/react-scroll-area": "^1.0.5",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-hover-card": "^1.0.7",
-    "@radix-ui/react-navigation-menu": "^1.1.4",
-    "@radix-ui/react-menubar": "^1.0.4",
-    "@radix-ui/react-radio-group": "^1.1.3",
-    "@radix-ui/react-collapsible": "^1.0.3",
-    "@radix-ui/react-aspect-ratio": "^1.0.3",
-    "@radix-ui/react-alert-dialog": "^1.0.5",
-
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.6",
+    "lucide-react": "^0.441.0",
+    "luxon": "^3.5.0",
+    "next": "^14.2.32",
+    "next-themes": "^0.3.0",
+    "postcss": "^8.4.41",
+    "react": "18.2.0",
+    "react-day-picker": "^9.5.0",
+    "react-dom": "18.2.0",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
-    "react-day-picker": "^9.5.0",
-    "date-fns": "^3.6.0",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss": "^4.0.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5.5.4",
-    "@types/react": "^18.3.3",
+    "@cloudflare/next-on-pages": "^1.13.14",
+    "@cloudflare/workers-types": "^4.20250819.0",
+    "@types/luxon": "^3.3.3",
     "@types/node": "^20.14.12",
-    "@types/luxon": "^3.3.3"
+    "@types/react": "^18.3.3",
+    "typescript": "^5.5.4",
+    "wrangler": "^4.31.0"
+  },
+  "engines": {
+    "node": ">=20 <21"
   }
 }
