--- a/web/package.json
+++ b/web/package.json
@@ -52,13 +52,10 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "^1.13.14",
-    "@cloudflare/workers-types": "^4.20250819.0",
     "@types/luxon": "^3.3.3",
     "@types/node": "^20.14.12",
     "@types/react": "^18.3.3",
-    "typescript": "^5.5.4",
-    "wrangler": "^4.31.0"
+    "typescript": "^5.5.4"
   },
   "engines": {
     "node": ">=20 <21"
