--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start -p 3000",
-    "pages:build": "npx @cloudflare/next-on-pages"
+    "pages:build": "npx @cloudflare/next-on-pages",
+    "build:cf": "npx @cloudflare/next-on-pages@latest && node scripts/cf-inject-config.mjs",
+    "deploy:cf": "npx wrangler pages deploy .vercel/output/static --project-name skynerd-ui --branch ui-v2 --commit-dirty=true"
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -52,10 +54,13 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.13.14",
+    "@cloudflare/workers-types": "^4.20250820.0",
     "@types/luxon": "^3.3.3",
     "@types/node": "^20.14.12",
     "@types/react": "^18.3.3",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "wrangler": "^4.31.0"
   },
   "engines": {
     "node": ">=20 <21"
