--- a/web/wrangler.toml
+++ b/web/wrangler.toml
@@ -1,3 +1,4 @@
 name = "skynerd-ui"
 pages_build_output_dir = ".vercel/output/static"
-compatibility_date = "2025-08-19"
+compatibility_date = "2025-08-20"
+compatibility_flags = ["nodejs_compat"]
