--- a/web/wrangler.toml
+++ b/web/wrangler.toml
@@ -2,3 +2,6 @@ name = "skynerd-ui"
 pages_build_output_dir = ".vercel/output/static"
 compatibility_date = "2025-08-20"
 compatibility_flags = ["nodejs_compat"]
+
+[vars]
+BACKEND_URL = "https://api.skynerd.io"
